--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "babel-preset-react": "^6.16.0",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --port 8089"
+    "build": "webpack",
+    "start": "./node_modules/.bin/webpack-dev-server --hot --inline --content-base --port 8089"
   },
   "author": "",
   "license": "ISC"
